--- a/macOS/Podfile
+++ b/macOS/Podfile
@@ -8,6 +8,7 @@ target 'APIExample' do
   # Pods for APIExample
   pod 'AGEVideoLayout', '~> 1.0.2'
   pod 'AgoraRtcEngine_macOS', '3.3.0'
+  pod 'OpenSSL-Universal', '1.0.2.17'
   
   target 'APIExampleTests' do
     inherit! :search_paths
